--- a/webserver/opentrain/locale/he/LC_MESSAGES/django.po
+++ b/webserver/opentrain/locale/he/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-02-24 15:41+0200\n"
+"POT-Creation-Date: 2014-02-24 16:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34,25 +34,221 @@ msgstr "מפה חיה"
 msgid "Report Details"
 msgstr "פירוט דיווח"
 
-#: common/static/common/ot_i18n.py:7
-#, fuzzy
-msgid "In Station:"
-msgstr ":בתחנה"
+#: common/static/common/ot_i18n.py:7 common/static/common/ot_i18n.py:14
+msgid "Akko"
+msgstr "עכו"
 
 #: common/static/common/ot_i18n.py:8
-#, fuzzy
-msgid "Before:"
-msgstr ":לפני"
+msgid "Modiin"
+msgstr "פאתי מודיעין"
 
 #: common/static/common/ot_i18n.py:9
-#, fuzzy
-msgid "After:"
-msgstr ":אחרי"
+msgid "Modiin Center"
+msgstr "מודיעין מרכז"
 
 #: common/static/common/ot_i18n.py:10
-#, fuzzy
-msgid "When:"
-msgstr ":מתי"
+msgid "Kiryat Hayyim"
+msgstr "קרית חיים"
+
+#: common/static/common/ot_i18n.py:11
+msgid "Kiryat Motzkin"
+msgstr "קרית מוצקין"
+
+#: common/static/common/ot_i18n.py:12
+msgid "Leb Hmifratz"
+msgstr "לב המפרץ"
+
+#: common/static/common/ot_i18n.py:13
+msgid "Hutsot HaMifrats"
+msgstr "חוצות המפרץ"
+
+#: common/static/common/ot_i18n.py:15
+msgid "Nahariyya"
+msgstr "נהריה"
+
+#: common/static/common/ot_i18n.py:16
+msgid "Haifa Center HaShmona"
+msgstr "חיפה מרכז - השמונה"
+
+#: common/static/common/ot_i18n.py:17
+msgid "Haifa Bat Gallim"
+msgstr "חיפה - בת גלים"
+
+#: common/static/common/ot_i18n.py:18
+msgid "Haifa Hof HaKarmel (Razi'el)"
+msgstr "חיפה - חוף הכרמל רזיאל"
+
+#: common/static/common/ot_i18n.py:19
+msgid "Atlit"
+msgstr "עתלית"
+
+#: common/static/common/ot_i18n.py:20
+msgid "Binyamina"
+msgstr "בנימינה"
+
+#: common/static/common/ot_i18n.py:21
+msgid "Kesariyya - Pardes Hanna"
+msgstr "קיסריה - פרדס חנה"
+
+#: common/static/common/ot_i18n.py:22
+msgid "Hadera West"
+msgstr "חדרה מערב"
+
+#: common/static/common/ot_i18n.py:23
+msgid "Natanya"
+msgstr "נתניה"
+
+#: common/static/common/ot_i18n.py:24
+msgid "Bet Yehoshua"
+msgstr "בית יהושע"
+
+#: common/static/common/ot_i18n.py:25
+msgid "Herzliyya"
+msgstr "הרצליה"
+
+#: common/static/common/ot_i18n.py:26
+msgid "Tel Aviv - University"
+msgstr "תל אביב - אוניברסיטה"
+
+#: common/static/common/ot_i18n.py:27
+msgid "Tel Aviv Center - Savidor"
+msgstr "תל אביב - מרכז סבידור"
+
+#: common/static/common/ot_i18n.py:28
+msgid "Bne Brak"
+msgstr "בני ברק"
+
+#: common/static/common/ot_i18n.py:29
+msgid "Petah Tikva   Kiryat Arye"
+msgstr "פתח תקוה - קרית אריה"
+
+#: common/static/common/ot_i18n.py:30
+msgid "Petah Tikva Sgulla"
+msgstr "פתח תקוה סגולה"
+
+#: common/static/common/ot_i18n.py:31
+msgid "Tel Aviv HaShalom"
+msgstr "תל אביב - השלום"
+
+#: common/static/common/ot_i18n.py:32
+msgid "Holon Junction"
+msgstr "צמת חולון"
+
+#: common/static/common/ot_i18n.py:33
+msgid "Holon - Wolfson"
+msgstr "חולון - וולפסון"
+
+#: common/static/common/ot_i18n.py:34
+msgid "Bat Yam - Yoseftal"
+msgstr "בת ים - יוספטל"
+
+#: common/static/common/ot_i18n.py:35
+msgid "Bat Yam - Komemiyyut"
+msgstr "בת ים - קוממיות"
+
+#: common/static/common/ot_i18n.py:36
+msgid "Kfar Habbad"
+msgstr "כפר חבד"
+
+#: common/static/common/ot_i18n.py:37
+msgid "Tel Aviv HaHagana"
+msgstr "תל אביב - ההגנה"
+
+#: common/static/common/ot_i18n.py:38
+msgid "Lod"
+msgstr "לוד"
+
+#: common/static/common/ot_i18n.py:39
+msgid "Ramla"
+msgstr "רמלה"
+
+#: common/static/common/ot_i18n.py:40
+msgid "Ganey Aviv"
+msgstr "גני אביב"
+
+#: common/static/common/ot_i18n.py:41
+msgid "Rehovot E. Hadar"
+msgstr "רחובות מזרח - הדר"
+
+#: common/static/common/ot_i18n.py:42
+msgid "Be'er Ya'akov"
+msgstr "באר יעקב"
+
+#: common/static/common/ot_i18n.py:43
+msgid "Yavne"
+msgstr "יבנה"
+
+#: common/static/common/ot_i18n.py:44
+msgid "Ashdod Ad Halom"
+msgstr "אשדוד עד הלום"
+
+#: common/static/common/ot_i18n.py:45
+msgid "Ashkelon"
+msgstr "אשקלון"
+
+#: common/static/common/ot_i18n.py:46
+msgid "Bet Shemesh"
+msgstr "בית שמש"
+
+#: common/static/common/ot_i18n.py:47
+msgid "Jerusalem Biblical Zoo"
+msgstr "ירושלים - גן החיות התנכי"
+
+#: common/static/common/ot_i18n.py:48
+msgid "Jerusalem Malha"
+msgstr "ירושלים מלחה"
+
+#: common/static/common/ot_i18n.py:49
+msgid "Kiryat Gat"
+msgstr "קרית גת"
+
+#: common/static/common/ot_i18n.py:50
+msgid "Be'er Sheva North University"
+msgstr "באר שבע צפון אוניברסיטה"
+
+#: common/static/common/ot_i18n.py:51
+msgid "Be'er Sheva Center"
+msgstr "באר שבע מרכז"
+
+#: common/static/common/ot_i18n.py:52
+msgid "Dimona"
+msgstr "דימונה"
+
+#: common/static/common/ot_i18n.py:53
+msgid "Lehavim - Rahat"
+msgstr "להבים רהט"
+
+#: common/static/common/ot_i18n.py:54
+msgid "Ben Gurion Airport"
+msgstr "נתבג"
+
+#: common/static/common/ot_i18n.py:55
+msgid "Kfar Sava"
+msgstr "כפר סבא"
+
+#: common/static/common/ot_i18n.py:56
+msgid "Rosh Ha'Ayin North"
+msgstr "ראש העין צפון"
+
+#: common/static/common/ot_i18n.py:57
+msgid "Yavne - West"
+msgstr "יבנה מערב"
+
+#: common/static/common/ot_i18n.py:58
+msgid "Rishon LeTsiyyon HaRishonim"
+msgstr "ראשון לציון הראשונים"
+
+#: common/static/common/ot_i18n.py:59
+msgid "Hod HaSharon"
+msgstr "הוד השרון"
+
+#: common/static/common/ot_i18n.py:60
+msgid "Sderot"
+msgstr "שדרות"
+
+#: common/static/common/ot_i18n.py:61
+msgid "Rishon LeTsiyyon - Moshe Dayan"
+msgstr "ראשון לציון משה דיין"
 
 #: common/templates/common/base.html:43
 msgid "Open Train"
@@ -77,3 +273,20 @@ msgstr "אפליקציה"
 #: common/templates/common/base.html:69
 msgid "Alpha version - on your own risk"
 msgstr "גרסת אלפא, על אחריותך"
+
+#: gtfs/forms.py:19
+msgid "In Station"
+msgstr "בתחנה"
+
+#: gtfs/forms.py:20
+msgid "Before"
+msgstr "לפני"
+
+#: gtfs/forms.py:21
+msgid "After"
+msgstr "אחרי"
+
+#: gtfs/forms.py:23
+msgid "When"
+msgstr "מתי"
+
